<resources>
    <string name="app_name">TTPassenger</string>
    <string name="its_dangerous_to_travel_alone">It\'s dangerous \n to travel alone.</string>
    <string name="take_passengerTT">Take TTPassenger with you!</string>
    <string name="welcome_to">Welcome To</string>
    <string name="Accept_terms">Tap \"ACCEPT &amp; CONTINUE\" to accept our </string>
    <string name="terms_of_service_and_privacy_policy">Terms of Service and Privacy Policy</string>
    <string name="accept_continue_transition">Accept Continue</string>
    <string name="accept_continue"><![CDATA[Accept & Continue]]></string>
    <string name="logo">Logo</string>
    <string name="transition_layer">Transition layer</string>
    <string name="mapboxToken">pk.eyJ1Ijoic3Z6eiIsImEiOiJja2J6Z3FjeWcwcmZsMnJwajI5bGZnbW13In0.m6vaO7YcdBl9tkl13HMJ8w</string>
    <string name="sub_logo">Sub Logo</string>
    <string name="close_button">Close Button</string>
    <string name="verify_phone_number">Enter Phone Number</string>
    <string name="phone_icon">phone icon</string>
    <string name="continue_button">Continue</string>
    <string name="mobile_phone_number">Phone Number</string>
    <string name="register_account_logo_transition">phone number logo</string>
    <string name="verification_code">Verification Code</string>
    <string name="_1111_111_1111">+1111&#8211;111&#8211;1111</string>
    <string name="dash">- - - - - -</string>
    <string name="enter_the_6_digit_code">Enter the 6 digit code above</string>
    <string name="we_have_sent_you_an_sms_with_a_code_to_the_number_below">We sent you an SMS verification code to the number below.</string>
    <string name="passenger">Passenger</string>
    <string name="driver">Driver</string>
    <string name="full_name_icon">Full name Icon</string>
    <string name="create_account">Create Account</string>
    <string name="real_name">Full Name</string>
    <string name="container">Container</string>
    <string name="date_of_birth_icon">Date of Birth Icon</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="drivers_licence_icon">Drivers Licence Icon</string>
    <string name="driver_car_icon">Driver Car Icon</string>
    <string name="driver_association">Driver Association</string>
    <string name="association">Association</string>
    <string name="select_association">Select Association</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="select_vehicle">Select Vehicle</string>
    <string name="licence_id">Licence ID</string>
    <string name="background_image">background Image</string>
    <string name="eg_number">e.g. 868&#8211;111&#8211;1111</string>
    <string name="phone_error">Requires a valid Trinidad number</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account">Account</string>
    <string name="scan">Scan</string>
    <string name="create_ride_session">create ride session</string>
    <string name="user_location_permission_explanation">Require location permissions to locate user position</string>
    <string name="user_location_permission_not_granted">Permissions not granted</string>
    <string name="select_destination">Select Destination</string>
    <string name="cancel_destination">Cancel Ride Request</string>
    <string name="title_activity_qr_code_handler">QrCodeHandler</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="list_of_ride_request">List of Ride Request</string>
    <string name="qr_code_for_passenger">QR Code for Passenger</string>
    <string name="emergency_call">SOS Message</string>
    <string name="share">Share Ride</string>
    <string name="contacts">Contacts</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="back_arrow">back arrow</string>
    <string name="back">Back</string>
    <string name="my_contact">My Contact</string>
    <string name="add_contact">Add Contact</string>
    <string name="back_to_map">Go Back to Ride Request</string>
    <string name="qr_code_image">Qr Code Image</string>
    <string name="message_information">message information</string>
    <string name="go_back_to_ttpassenger_app">Go back to ttpassenger App</string>
    <string name="complete_ride">Complete Ride</string>
    <string name="login">Login</string>
    <string name="register">register</string>
    <string name="welcome_back">Welcome back</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="registration_form">Registration Form</string>
    <string name="logout">logout</string>
</resources>
