<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.VerifyPhoneNumber">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginBottom="80dp"
        android:src="@drawable/ic_verifybackground"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageView
        android:id="@+id/verify_phone_activity_header_image"
        android:layout_width="115dp"
        android:layout_height="110dp"
        android:contentDescription="@string/sub_logo"
        android:elevation="1dp"
        android:outlineProvider="none"
        android:src="@drawable/ic_sublogo"
        android:transitionName="@string/register_account_logo_transition"
        app:layout_constraintBottom_toTopOf="@+id/verify_phone_activity_text_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/verify_phone_activity_back_button"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/circle_layout_passenger"
        android:contentDescription="@string/close_button"
        android:elevation="10dp"
        android:src="@drawable/ic_close"
        android:tint="@color/whitePurple"
        app:layout_constraintBottom_toTopOf="@+id/verify_phone_activity_text_title"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/verify_phone_activity_layout"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:contentDescription="@string/container"
        android:src="@drawable/login_background"
        android:layout_marginBottom="20dp"
        android:transitionName="@string/accept_continue_transition"
        app:layout_constraintBottom_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/verify_phone_activity_text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="serif"
        android:text="@string/verification_code"
        android:textColor="@color/whitePurple"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/verify_phone_activity_layout"
        app:layout_constraintStart_toStartOf="@+id/verify_phone_activity_layout"
        app:layout_constraintTop_toTopOf="@+id/verify_phone_activity_layout" />

    <TextView
        android:id="@+id/verify_phone_activity_message1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingStart="35dp"
        android:paddingEnd="35dp"
        android:text="@string/we_have_sent_you_an_sms_with_a_code_to_the_number_below"
        android:textAlignment="center"
        android:textColor="@color/whitePurple"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/verify_phone_activity_layout"
        app:layout_constraintStart_toStartOf="@+id/verify_phone_activity_layout"
        app:layout_constraintTop_toBottomOf="@+id/verify_phone_activity_text_title" />

    <TextView
        android:id="@+id/verify_phone_activity_entered_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/_1111_111_1111"
        android:textColor="@color/whitePurple"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/verify_phone_activity_layout"
        app:layout_constraintStart_toStartOf="@+id/verify_phone_activity_layout"
        app:layout_constraintTop_toBottomOf="@+id/verify_phone_activity_message1" />

    <EditText
        android:id="@+id/verify_code_number_verification_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:digits="0123456789"
        android:hint="@string/dash"
        android:inputType="number"
        android:maxLength="6"
        android:imeOptions="actionNext"
        android:textColor="@color/whitePurple"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/verify_phone_activity_layout"
        app:layout_constraintStart_toStartOf="@+id/verify_phone_activity_layout"
        app:layout_constraintTop_toBottomOf="@+id/verify_phone_activity_entered_number" />

    <TextView
        android:id="@+id/verify_phone_activity_number_message2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_the_6_digit_code"
        android:textColor="@color/whitePurple"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/verify_phone_activity_layout"
        app:layout_constraintStart_toStartOf="@+id/verify_phone_activity_layout"
        app:layout_constraintTop_toBottomOf="@+id/verify_code_number_verification_field" />

</androidx.constraintlayout.widget.ConstraintLayout>