<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.WelcomeScreen">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_welcomescreen"
        app:layout_constraintTop_toBottomOf="@+id/welcome_screen_logo" />

    <TextView
        android:id="@+id/welcome_screeen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="85dp"
        android:fontFamily="sans-serif-thin"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:text="@string/welcome_to"
        android:textColor="@color/colorAccent"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/welcome_screen_logo"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginTop="20dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/logo"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_ttpassengerlogo_welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="80dp"
        android:paddingEnd="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <Button
            android:id="@+id/welcome_screen_login"
            style="@style/AppTheme.RoundedCornerMaterialButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:text="@string/login"
            android:textSize="20sp" />

        <Button
            android:id="@+id/welcome_screen_register"
            style="@style/AppTheme.RoundedCornerMaterialButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:text="@string/register"
            android:textSize="20sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/welcome_screen_transition_image"
        android:layout_width="90dp"
        android:layout_height="120dp"
        android:layout_marginStart="3.5dp"
        android:layout_marginBottom="11dp"
        android:contentDescription="@string/sub_logo"
        android:elevation="1dp"
        android:outlineProvider="none"
        android:src="@drawable/ic_sublogo"
        android:transitionName="@string/register_account_logo_transition"
        app:layout_constraintBottom_toBottomOf="@+id/welcome_screen_logo"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>